--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <html>
 <head>
-	<title>Rocket Internet by TEMPLATE STOCK</title>
+	<title>OTM Software solutions</title>
 
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -29,12 +29,12 @@
 <header>
 	<div id="homeFullScreen">
 		<div class="header-text">
-			<h1>Rocket internet</h1>
+			<h1>OTM Solutions</h1>
 			<div class="vertical-line"></div>
 			<p>
-				LOREM IPSUM DOLOR SIT AMET NULLAM CONSEQUAT 
+				Software solutions 
 				<br />
-				INTERDUM VIVAMUS DONCE SED LIBERO.
+				Web hosting
 			</p>
 		</div><!-- End HeaderText -->
 	</div><!-- End homeFullScreen -->
