Updated info in index

--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
 		<div class="row">
 			<div class="col-md-6 col-sm-6">
 				<div class="feature-box">
-					<h1>Lorem Ipsum</h1>
-					<p>Lorem Ipsum is Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
+					<h1>Software solutions</h1>
+					<p>Our team provides top quality, high perfomance software solutions,
+                         From Point-of-sale to a complete inventory management systems with transitions tracking
+                         , employees management and multi-vendors e-markets</p>
 				</div>
 			</div><!-- End col-md-6 -->
 			<div class="col-md-6 col-sm-6 nopadding">
@@ -62,8 +64,11 @@
 			</div><!-- End col-md-6 -->
 			<div class="col-md-6 col-sm-6">
 				<div class="feature-box">
-					<h1>Lorem Ipsum</h1>
-					<p>Lorem Ipsum is Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been 	the industry's standard dummy text ever since the 1500s,</p>
+					<h1>Web hosting</h1>
+					<p>
+                        Got a website, looking for a good webhosting with a domain name of your choosing? 
+                        We provide web hosting solutions depending on your website's needs.
+                    </p>
 				</div>
 			</div><!-- End col-md-6 -->
 		</div>
